feat: add Reaction interaction type
Signed-off-by: Michael Chekin <mchekin@gmail.com>